--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    
+    <string name="open">open</string>
+    <string name="close">close</string>
+
+    <string-array name="menu_categories">
+        <item>User</item>
+        <item>Главная</item>
+        <item>Моя CARZILLA</item>
+        <item>Категории</item>
+        <item>Поиск</item>
+        <item>Поддержка</item>
+        <item>Автопомощь</item>
+        <item>Выход</item>
+    </string-array>
 </resources>
